--- a/nav-hero-aboutus-footer,ctct/main.html
+++ b/nav-hero-aboutus-footer,ctct/main.html
@@ -15,33 +15,33 @@
 
     <style>
         * {
-  font-family: "Figtree", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
-}
-
-        .tulisan-logo{
-            color: #F5E8D7;
-font-family: Doto;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+          font-family: "Figtree", sans-serif;
+          font-optical-sizing: auto;
+          /* font-weight: <weight>; */
+          font-style: normal;
         }
 
-        .tulisan-logo-2{
-color: #F5E8D7;
-font-family: Doto;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+      .tulisan-logo{
+          color: #F5E8D7;
+          font-family: Doto;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+        }
+
+      .tulisan-logo-2{
+          color: #F5E8D7;
+          font-family: Doto;
+          font-size: 40px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
         }
 
         .gradient-text {
             background: linear-gradient(90deg, #2FE559, #038AFF);
-            -webkit-background-clip: text;
+            /* -webkit-background-clip: text; */
             -webkit-text-fill-color: transparent;
         }
     </style>
@@ -362,10 +362,10 @@ line-height: normal;
         });
 
         document.getElementById('hamburger').addEventListener('click', function () {
-    const menu = document.getElementById('menu');
-    menu.classList.toggle('hidden'); // Show or hide menu
-    menu.classList.toggle('block'); // Ensure it becomes block when shown
-});
+        const menu = document.getElementById('menu');
+        menu.classList.toggle('hidden'); // Show or hide menu
+        menu.classList.toggle('block'); // Ensure it becomes block when shown
+    });
 
 
         // Change hero background
